[project]
name = "overturemaps"
version = "0.20.0"
description = "Python tools for interacting with Overture Maps (overturemaps.org) data."
authors = [
    {name = "Jacob Wasserman", email = "jwasserman@meta.com"}
]
maintainers = [
    {name = "Adam Lastowka", email = "adam@overturemaps.org"},
    {name = "Dana Bauer", email = "dana@overturemaps.org"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["geospatial", "mapping", "GIS", "geojson", "shapely", "parquet", "opendata", "overture", "maps"]
dependencies = [
    "click>=8.3.0",
    "orjson>=3.9.0",
    "pyarrow>=15.0.2",
    "shapely>=2.1.0",
    # numpy is not directly imported in the codebase, but we include it as a dependency
    # because: (1) it's a natural companion to pyarrow and shapely for geospatial workflows,
    # (2) pyarrow has excellent numpy interop (.to_numpy(), pa.array(numpy_arr)),
    # (3) if this project evolves into a library, users will expect numpy for array operations,
    # (4) it's already a transitive dependency of geopandas when that optional extra is installed.
    # Keeping it signals that this package is ready for data science workflows.
    "numpy>=1.26.4",
    "tqdm>=4.67.3",
]

[project.urls]
Homepage = "https://overturemaps.org"
Source = "https://github.com/OvertureMaps/overturemaps-py"
Issues = "https://github.com/OvertureMaps/overturemaps-py/issues"

[project.optional-dependencies]
geopandas = ["geopandas>=1.1.0"]

[project.scripts]
overturemaps = "overturemaps.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
